# presale-analytics

./: .gitignore  README.md  pyproject.toml
data/: sampleNative.json  sampleToken.json
presales/: main.py  parser.py  queries.py
